--- a/single-repo.html
+++ b/single-repo.html
@@ -22,9 +22,12 @@
   </header>
   
   <main>
-  
-  </main>
+  <div id="issues-container" class="list-group">
 
+  </div>
+  <divid="limit-warning"></div>
+  </main>
+<script src="./assets/js/single.js"></script>
 </body>
 
 </html>
